--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
@@ -27,8 +28,12 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "1.3.7",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.1.2",
     "undertaker-registry": "^1.0.1",
+    "webpack": "^4.25.1",
     "webpack-stream": "^5.1.1",
     "xmldom": "^0.1.27"
   }
