--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
+    "bootstrap-select": "^1.13.3",
     "browser-sync": "^2.26.3",
     "colorguard": "^1.2.1",
     "gulp": "^4.0.0",
