--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "node-sass": "^4.12.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
-    "browser-sync": "^2.26.3",
-    "gulp": "^4.0.0",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
     "gulp-clean-css": "^3.10.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-sprite": "1.3.7",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.7",
+    "gulp-svg-sprite": "^1.5.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
     "undertaker-registry": "^1.0.1",
-    "webpack": "^4.29.6",
+    "webpack": "^4.35.0",
     "webpack-glsl-loader": "^1.0.1",
     "webpack-stream": "^5.2.1",
     "xmldom": "^0.1.27"
